--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-<title> Local information of Sreekrishnapuram</title>
+<title> Local information of Sreekrishnapram</title>
 <style>
 body { margin:0;
        background:url('http://4everstatic.com/images/nature/plantes/vert,-feuilles,-mousse-200101.jpg');
